--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,36 @@
-fastapi==0.95.2
+blinker==1.7.0
+click==8.1.7
+cmdstanpy==1.2.0
+contourpy==1.1.1
+cycler==0.12.1
 fastdtw==0.3.4
-Flask==2.0.2
-Flask-Compress==1.10.1
-h5py==3.9.0
-hid-parser==0.0.3
-holidays==0.33
-html5lib==1.0.1
-htmlmin==0.1.12
-httplib2==0.14.0
-imbalanced-learn==0.10.1
-imblearn==0.0
-importlib-metadata==4.11.3
-importlib-resources==6.1.0
-Jinja2==3.0.3
-jsonschema==3.2.0
-keras==2.13.1
-lightgbm==4.1.0
-matplotlib==3.5.1
-matplotlib-inline==0.1.6
-numpy==1.22.0
-pandas==2.0.1
-pandas-profiling==3.1.0
-prophet==1.1.4
-psutil==5.9.4
-psycopg2==2.8.4
-pyproj==2.5.0
-requests==2.26.0
-requests-oauthlib==1.3.1
-requests-unixsocket==0.2.0
-scikit-learn==1.0.2
-scipy==1.7.3
-sklearn==0.0
+flask==3.0.0
+fonttools==4.46.0
+holidays==0.38
+importlib-metadata==7.0.0
+importlib-resources==6.1.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kiwisolver==1.4.5
+MarkupSafe==2.1.3
+matplotlib==3.7.4
+memory-profiler==0.61.0
+numpy==1.24.4
+packaging==23.2
+pandas==2.0.3
+patsy==0.5.4
+Pillow==10.1.0
+prophet==1.1.5
+psutil==5.9.6
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+scipy==1.10.1
+six==1.16.0
+stanio==0.3.0
 statsmodels==0.14.0
-tensorboard==2.13.0
-tensorboard-data-server==0.7.1
-tensorflow==2.13.1
-tensorflow-estimator==2.13.0
-tensorflow-io-gcs-filesystem==0.34.0
-torch==2.1.0
-tqdm==4.62.3
-xgboost==1.7.5
+tabulate==0.9.0
+tqdm==4.66.1
+tzdata==2023.3
+werkzeug==3.0.1
+zipp==3.17.0
