Hover, sliders style, file size limit, user notification for errors

--- a/evaluation_protocol/config.ini
+++ b/evaluation_protocol/config.ini
@@ -1,10 +1,16 @@
 [SINGLESCOREINFO]
-accuracy = 6
-outliers = 5
-shape = 5
-time = 4
-naive = 3
+accuracy = 2
+outliers = 2
+shape = 2
+time = 2
+naive = 2
 
 [PREPROCESSING]
-passed = true
+passed = false
+
+[USERFILE]
+file_path = empty
+
+[MODELS]
+has_naive_run = false
 
