Single score buttons

--- a/evaluation_protocol/config.ini
+++ b/evaluation_protocol/config.ini
@@ -6,11 +6,11 @@ time = 2
 naive = 2
 
 [PREPROCESSING]
-passed = false
+passed = true
 
 [USERFILE]
-file_path = empty
+file_path = uploads/sample_dataset.csv
 
 [MODELS]
-has_naive_run = false
+has_naive_run = true
 
