--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,10 @@
 [SINGLESCOREINFO]
-accuracy = 2
-outliers = 2
-shape = 2
-time = 2
-naive = 2
+accuracy = 5
+outliers = 5
+shape = 5
+time = 5
+naive = 5
+complexity = 5
 
 [PREPROCESSING]
 passed = true
