Changes in html

--- a/config.ini
+++ b/config.ini
@@ -7,11 +7,11 @@ naive = 5
 complexity = 5
 
 [PREPROCESSING]
-passed = true
+passed = false
 
 [USERFILE]
-file_path = uploads/sample_dataset.csv
+file_path = empty
 
 [MODELS]
-has_naive_run = true
+has_naive_run = false
 
