--- a/config.ini
+++ b/config.ini
@@ -7,11 +7,11 @@ naive = 5
 complexity = 5
 
 [PREPROCESSING]
-passed = false
+passed = true
 
 [USERFILE]
-file_path = empty
+file_path = uploads/sample_dataset.csv
 
 [MODELS]
-has_naive_run = false
+has_naive_run = true
 
